// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Type System: A Schema must have Object root types rejects a Schema whose mutation type is an data type 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 14,
        "line": 6,
      },
    ],
    "message": "Mutation root type must be Object type if provided, it cannot be Mutation.",
  },
]
`;

exports[`Type System: A Schema must have Object root types rejects a Schema whose query root resolver is not an Object 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 14,
        "line": 2,
      },
    ],
    "message": "Query root type must be Object type, it cannot be Query.",
  },
]
`;

exports[`Type System: A Schema must have Object root types rejects a Schema whose subscription type is an data type 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 14,
        "line": 6,
      },
    ],
    "message": "Subscription root type must be Object type if provided, it cannot be Subscription.",
  },
]
`;
